<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercadeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/lbacerca"
        style="@style/styleTexto"
        android:layout_width="335dp"
        android:layout_height="74dp"
        android:text="@string/a_cerca_de"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/textView"
        style="@style/styleTexto"
        android:layout_width="328dp"
        android:layout_height="107dp"
        android:text="@string/la_aplicacion_ha_sido_desarrollada_por_rub_n_sanz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbacerca"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView2"
        style="@style/styleTexto"
        android:layout_width="328dp"
        android:layout_height="107dp"
        android:text="@string/se_trata_de_una_aplicacion_para_visulaizar_motos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbacerca"
        app:layout_constraintVertical_bias="0.295" />

    <Button
        android:id="@+id/buttonVolver"
        style="@style/styleBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_al_inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

</androidx.constraintlayout.widget.ConstraintLayout>