<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriasFragment">


    <Button
        android:id="@+id/btnSeleccionar"
        style="@style/styleBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <TextView
        android:id="@+id/textView3"
        style="@style/styleTexto"
        android:layout_width="331dp"
        android:layout_height="109dp"
        android:text="Categorias"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="410dp"
        android:layout_height="248dp"
        android:src="@drawable/motoscarretera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="410dp"
        android:layout_height="370dp"
        android:src="@drawable/motoscross"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <RadioGroup
        android:id="@+id/radioGroup"
        style="@style/styleTexto"
        android:layout_width="309dp"
        android:layout_height="100dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <RadioButton
            android:id="@+id/radioBtnCarretera"
            style="@style/styleTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#74FFFFFF"
            android:text="@string/motos_de_carretera"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/radioBtnCross"
            style="@style/styleTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#74FFFFFF"
            android:text="@string/motos_de_cross"
            android:textColor="#000000" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>